--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">Arcana</string>
+    <string name="_1_card_spread">1 Card Spread</string>
+    <string name="_7_card_spread">7 Card Spread</string>
+    <string name="_5_card_spread">5 Card Spread</string>
+    <string name="horseshoe_spread">Horseshoe Spread</string>
+    <string name="celt_c_cross_spread">Celtıc Cross Spread</string>
+    <string name="_3_card_spread">3 Card Spread</string>
+    <string name="email">Email</string>
+    <string name="log_in">Log In</string>
+    <string name="password">Password</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="create_new_account">Create New Account</string>
+    <string name="reset_password">Reset Password</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
