--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,11 @@
     <string name="lucky">I\'m Feeling Lucky!</string>
     <string name="send_tarot">Get Your Readıng!</string>
     <string name="instruction_to_send_tarot_text">Click the Button to Get Your Tarot Reading</string>
+    <string name="select_a_theme">Select a Theme For Your Tarot Reading</string>
+    <string name="general_theme">General</string>
+    <string name="love_theme">Love</string>
+    <string name="Career_theme">Career</string>
+    <string name="get_reading">Get Your Reading!</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
