--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Arcana</string>
+    <string name="welcome">Welcome to Arcana!</string>
     <string name="_1_card_spread">1 Card Spread</string>
     <string name="_7_card_spread">7 Card Spread</string>
     <string name="_5_card_spread">5 Card Spread</string>
