--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,10 +13,10 @@
     <string name="forgot_password">Forgot Password?</string>
     <string name="create_new_account">Create New Account</string>
     <string name="reset_password">Reset Password</string>
-    <string name="pick_a_card_text">Click the Button to Pick a Card</string>
+    <string name="pick_a_card_text">Click the Button to Pick a Card!</string>
     <string name="lucky">I\'m Feeling Lucky!</string>
     <string name="send_tarot">Get Your Readıng!</string>
-    <string name="instruction_to_send_tarot_text">Click the Button to Get Your Tarot Reading</string>
+    <string name="card_selected_text">Your Card Has Been Selected!</string>
     <string name="select_a_theme">Select a Theme For Your Tarot Reading</string>
     <string name="general_theme">General</string>
     <string name="love_theme">Love</string>
