--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="love_theme">Love</string>
     <string name="Career_theme">Career</string>
     <string name="get_reading">Get Your Reading!</string>
+    <string name="forgot_password_info">We will magically send you a mail to reset your password!</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
