--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,36 +1,35 @@
 <resources>
     <string name="app_name">Arcana</string>
-    <string name="welcome">Welcome to Arcana!</string>
-    <string name="_1_card_spread">1 Card Spread</string>
-    <string name="_7_card_spread">7 Card Spread</string>
-    <string name="_5_card_spread">5 Card Spread</string>
-    <string name="horseshoe_spread">Horseshoe Spread</string>
-    <string name="celt_c_cross_spread">Celtıc Cross Spread</string>
-    <string name="_3_card_spread">3 Card Spread</string>
+    <string name="welcome">Arcana\'ya Hoşgeldin!</string>
+    <string name="_1_card_spread">1 Kart Açılımı</string>
+    <string name="_7_card_spread">7 Kart Açılımı</string>
+    <string name="_5_card_spread">5 Kart Açılımı</string>
+    <string name="horseshoe_spread">At Nalı Açılımı</string>
+    <string name="celt_c_cross_spread">Celtıc Cross Açılımı</string>
+    <string name="_3_card_spread">3 Card Açılımı</string>
     <string name="email">Email</string>
-    <string name="name">Name</string>
-    <string name="Surname">Surname</string>
-    <string name="DateOfBirth">Date of Birth</string>
-    <string name="Save">Save</string>
-    <string name="Home">Home</string>
-    <string name="History">History</string>
-    <string name="Profile">Profile</string>
-    <string name="Settings">Settings</string>
-    <string name="log_in">Log In</string>
-    <string name="password">Password</string>
-    <string name="forgot_password">Forgot Password?</string>
-    <string name="create_new_account">Create New Account</string>
-    <string name="reset_password">Reset Password</string>
-    <string name="pick_a_card_text">Click the Button to Pick a Card!</string>
-    <string name="lucky">I\'m Feeling Lucky!</string>
-    <string name="send_tarot">Get Your Readıng!</string>
-    <string name="card_selected_text">Your Card Has Been Selected!</string>
-    <string name="select_a_theme">Select a Theme For Your Tarot Reading</string>
-    <string name="general_theme">General</string>
-    <string name="love_theme">Love</string>
-    <string name="Career_theme">Career</string>
-    <string name="get_reading">Get Your Reading!</string>
-    <string name="forgot_password_info">We will magically send you a mail to reset your password!</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="name">İsim</string>
+    <string name="Surname">Soyisim</string>
+    <string name="DateOfBirth">Doğum Tarihi</string>
+    <string name="Save">Kaydet</string>
+    <string name="Home">Anasayfa</string>
+    <string name="History">Geçmiş</string>
+    <string name="Profile">Profil</string>
+    <string name="Settings">Ayarlar</string>
+    <string name="log_in">Oturum Aç</string>
+    <string name="password">Şifre</string>
+    <string name="forgot_password">Şifremi Unuttum</string>
+    <string name="create_new_account">Hesap Oluştur</string>
+    <string name="reset_password">Şifreyi Sıfırla</string>
+    <string name="pick_a_card_text">Kart seçmek için butona tıkla!</string>
+    <string name="lucky">Şanslı Hissediyorum!</string>
+    <string name="send_tarot">Falı Yorumla</string>
+    <string name="card_selected_text">Kartın Seçildi!</string>
+    <string name="select_a_theme">Fal Konusunu Seç</string>
+    <string name="general_theme">Genel</string>
+    <string name="love_theme">Aşk</string>
+    <string name="Career_theme">Kariyer</string>
+    <string name="get_reading">Falını Yorumlat!</string>
+    <string name="forgot_password_info">Şifrenin sıfırlanması için sana sihirli bir mail göndereceğiz!</string>
+
 </resources>
